podcast content added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,8 @@
   <body>
 
     {% include header.html %}
-    {% include sub_nav.html %}
 
-    <div class="page-content">
+    <div class="page-content wrapper">
       {{ content }}
     </div>
 
