--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,27 @@
 ---
 layout: default
 ---
-<header>
-  <h1>{{ page.title }}</h1>
-</header>
 
-<article>
-  {{ content }}
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <div class="post-header">
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </div>
+
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+
+    {% if page.file %}
+    <audio src="{{ page.file }}" preload="auto" controls="controls" type="audio/mp3">
+      Your browser doesn't support the <code>audio</code> element.
+    </audio>
+
+    <a href="{{ page.file }}" class="button">Download</a>
+    {% endif %}
+
+    {% if page.soundcloud %}
+    {{ page.soundcloud }}
+    {% endif %}
+
+  </div>
 </article>
-
-{% if page.file %}
-<audio src="{{ page.file }}" preload="auto" controls="controls" type="audio/mp3">
-  Your browser doesn't support the <code>audio</code> element.
-</audio>
-
-<a href="{{ page.file }}" class="button">Download</a>
-{% endif %}
-
-{% if page.soundcloud %}
-{{ page.soundcloud }}
-{% endif %}
