--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,24 +3,32 @@ layout: default
 ---
 
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <div class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  <div class="post-meta">
+    <div class="post-date">
+      <span class="post-month">{{ page.date | date: "%b" }}</span>
+      <span class="post-day">{{ page.date | date: "%-d" }}</span>
+      <span class="post-year">{{ page.date | date: "%Y" }}</span>
+    </div>
+    {% if page.author %}
+      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+        <span itemprop="name">{{ page.author }}</span>
+      </span>
+    {% endif %}
   </div>
+
+  <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
 
     {% if page.file %}
-    <audio src="{{ page.file }}" preload="auto" controls="controls" type="audio/mp3">
-      Your browser doesn't support the <code>audio</code> element.
-    </audio>
+    <div>
+      <audio src="{{ page.file }}" preload="auto" controls="controls" type="audio/mp3">
+        Your browser doesn't support the <code>audio</code> element.
+      </audio>
+    </div>
 
     <a href="{{ page.file }}" class="button">Download</a>
-    {% endif %}
-
-    {% if page.soundcloud %}
-    {{ page.soundcloud }}
     {% endif %}
 
   </div>
