--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="wrapper">
-  <div class="copyright cell right">&copy; Dude, Where's My Podcast? Podcast 2006-2015</div>
+  <div class="copyright cell right">Dude, Where's My Podcast? Podcast &copy;2006-2015</div>
 </footer>
