--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <header class="site-header">
-  <h1>
-    <a class="site-title" href="{{ site.baseurl }}/">
-      {{ site.title }}
-    </a>
-  </h1>
+  <div class="slant">
+    <h1>
+      <a class="site-title" href="{{ site.baseurl }}/">
+        {{ site.title }}
+      </a>
+    </h1>
+    <h3 class="end-slant">DWMPP</h3>
+  </div>
 </header>
