--- a/_sass/_demos.scss
+++ b/_sass/_demos.scss
@@ -6,10 +6,10 @@
   }
   .cell{
     color: #fff;
-    background-color: $blue-light;
+    background-color: $primary-light;
 
     &:nth-child(even){
-      background-color: $blue;
+      background-color: $primary;
     }
   }
 }
