--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,13 +1,15 @@
-$blue: #216a9e;
-$blue-dark: darken($blue, 10%);
-$blue-light: lighten($blue, 10%);
+$primary: #00A0B0;
+$primary-dark: darken($primary, 10%);
+$primary-light: lighten($primary, 10%);
 
-$orange: #D15017;
+$secondary: #EB6841;
 
-$red: red;
+$brown: #6A4A3C;
+$orange: #EB6841;
+
+$red: #CC333F;
 $green: green;
-$yellow: yellow;
-
+$yellow: #EDC951;
 $purple: purple;
 
 $white: #fff;
