valid rss and itunes links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
-<footer class="wrapper">
+<footer>
+  <div class="links">
+    <a href="https://itunes.apple.com/us/podcast/dude-wheres-my-podcast-podcast/id1063065491" target="_blank">View in iTunes</a> |
+    <a href="/feed.xml" target="_blank">Subscribe via RSS</a>
+  </div>
   <div class="copyright cell right">Dude, Where's My Podcast? Podcast &copy;2006-2015</div>
 </footer>
