--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,14 +1,3 @@
-html{
-	height: 100%;
-}
-
-body{
-	position: relative;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	min-height: 100%;
-}
-
 header{
 	background-color: $yellow;
 	color: #fff;
@@ -105,56 +94,6 @@ header{
 	}
 }
 
-.site-sub-nav{
-	background-color: $gray6;
-	border-bottom: 1px solid $gray5;
-	padding: 8px 13px;
-
-	a{
-		display: inline-block;
-		padding: 0 8px;
-	}
-}
-
-.hero{
-  height: 300px;
-  background: url('/img/branding/self.jpg') no-repeat 5% bottom;
-  position: relative;
-  z-index: 1;
-  box-shadow: 0 -1px 1px 0 rgba(0,0,0,.25) inset;
-
-  @media screen and (max-width: 767px){
-  	background: url('/img/branding/shirt.jpg') no-repeat center bottom;
-
-  	.cell{
-  		text-align: center !important;
-  	}
-  }
-
-	@media screen and (max-width: 767px){
-	  &:after{
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 0;
-	    right: 0;
-	    z-index: 1;
-	    background-color: rgba(255,255,255,.75);
-	    content: '';
-	  }
-	}
-
-  *{
-    position: relative;
-    z-index: 2;
-    color: $gray1;
-  }
-
-  p{
-    font-size: 1.8rem;
-  }
-}
-
 .wrapper{
 	padding: 34px 21px;
 
@@ -205,11 +144,17 @@ header{
 }
 
 footer{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	overflow: hidden;
 	max-width: 960px;
 	margin: 0 auto;
 	overflow: hidden;
+	padding: 0 30px 30px;
+
+	.links{
+		float: left;
+	}
+
+	.copyright{
+		float: right;
+	}
 }
